use jvm.options